--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
+    "dotenv": "^10.0.0",
     "react": "^17.0.2",
+    "react-alice-carousel": "^2.5.1",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.1.2"
   },
+  "homepage": "http://www.thunderstrike.ca",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
